--- a/modules/iotacss-tools-ms/_tools.ms.scss
+++ b/modules/iotacss-tools-ms/_tools.ms.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 // Modular Scale Tool
 
 
@@ -25,7 +27,7 @@ $iota-tools-ms-scale  : 3 !default;
     $num: $num * 10;
   }
   
-  @return round( $number * $num ) / $num;
+  @return math.div(math.round( $number * $num ), $num);
   
 }
 
