--- a/modules/iotacss-tools-core/libraries/_generate-spacing.scss
+++ b/modules/iotacss-tools-core/libraries/_generate-spacing.scss
@@ -1,3 +1,5 @@
+@use '../../iotacss-tools-core/tools.core' as *;
+
 @mixin _iota-generate-spacing($props...){
   $spacing-default  : nth($props, 2);
   $spacing-extra    : nth($props, 3);
