--- a/modules/iotacss-tools-core/utilities/_equalize-map.scss
+++ b/modules/iotacss-tools-core/utilities/_equalize-map.scss
@@ -1,9 +1,11 @@
+@use 'sass:map';
+
 @function _iota-equalize-map($map1, $map2) {
   @each $key, $value in $map1 {
 
-    @if (map-has-key($map2, $key) == false) {
+    @if (map.has-key($map2, $key) == false) {
 
-      $map1: map-remove($map1, $key);
+      $map1: map.remove($map1, $key);
 
     }
 
