--- a/modules/iotacss-tools-rtl/_tools.rtl.scss
+++ b/modules/iotacss-tools-rtl/_tools.rtl.scss
@@ -1,15 +1,15 @@
-@import './libraries/align-content';
-@import './libraries/align-self';
-@import './libraries/border';
-@import './libraries/border-color';
-@import './libraries/border-radius';
-@import './libraries/border-style';
-@import './libraries/border-width';
-@import './libraries/clear';
-@import './libraries/direction';
-@import './libraries/float';
-@import './libraries/justify-content';
-@import './libraries/left-right';
-@import './libraries/margin';
-@import './libraries/padding';
-@import './libraries/text-align';
+@forward './libraries/align-content';
+@forward './libraries/align-self';
+@forward './libraries/border';
+@forward './libraries/border-color';
+@forward './libraries/border-radius';
+@forward './libraries/border-style';
+@forward './libraries/border-width';
+@forward './libraries/clear';
+@forward './libraries/direction';
+@forward './libraries/float';
+@forward './libraries/justify-content';
+@forward './libraries/left-right';
+@forward './libraries/margin';
+@forward './libraries/padding';
+@forward './libraries/text-align';
