--- a/modules/iotacss-tools-rtl/libraries/_clear.scss
+++ b/modules/iotacss-tools-rtl/libraries/_clear.scss
@@ -1,3 +1,5 @@
+@use '../iotacss-tools-core/tools.core' as *;
+
 @mixin iota-clear($value) {
   @include _iota-direction-property(clear, $value, false);
 }
