--- a/modules/iotacss-tools-rtl/libraries/_direction.scss
+++ b/modules/iotacss-tools-rtl/libraries/_direction.scss
@@ -1,3 +1,5 @@
+@use '../iotacss-tools-core/tools.core' as *;
+
 @mixin iota-direction($value) {
   @include _iota-direction-property(direction, $value, false);
 }
