--- a/modules/iotacss-tools-rtl/libraries/_float.scss
+++ b/modules/iotacss-tools-rtl/libraries/_float.scss
@@ -1,3 +1,5 @@
+@use '../iotacss-tools-core/tools.core' as *;
+
 @mixin iota-float($value) {
   @include _iota-direction-property(float, $value, false);
 }
