--- a/modules/iotacss-tools-rtl/libraries/_justify-content.scss
+++ b/modules/iotacss-tools-rtl/libraries/_justify-content.scss
@@ -1,3 +1,5 @@
+@use '../iotacss-tools-core/tools.core' as *;
+
 @mixin iota-justify-content($value) {
   @include _iota-direction-property(justify-content, $value, false);
 }
