--- a/modules/iotacss-tools-rtl/libraries/_margin.scss
+++ b/modules/iotacss-tools-rtl/libraries/_margin.scss
@@ -1,3 +1,5 @@
+@use '../iotacss-tools-core/tools.core' as *;
+
 @mixin iota-margin-left($value) {
   @include iota-margin(null null null $value);
 }
