--- a/modules/iotacss-tools-rtl/libraries/_padding.scss
+++ b/modules/iotacss-tools-rtl/libraries/_padding.scss
@@ -1,3 +1,5 @@
+@use '../iotacss-tools-core/tools.core' as *;
+
 @mixin iota-padding-left($value) {
   @include _iota-directional-property('padding', null, null null null $value, false);
 }
