--- a/modules/iotacss-tools-rtl/libraries/_text-align.scss
+++ b/modules/iotacss-tools-rtl/libraries/_text-align.scss
@@ -1,3 +1,5 @@
+@use '../iotacss-tools-core/tools.core' as *;
+
 @mixin iota-text-align($value) {
   @include _iota-direction-property('text-align', $value, false);
 }
