--- a/utilities/_flex-direction.scss
+++ b/utilities/_flex-direction.scss
@@ -1,1 +1,1 @@
-@import '../modules/iotacss-utils-flex-direction/utilities.flex-direction';
+@forward '../modules/iotacss-utils-flex-direction/utilities.flex-direction';
