--- a/utilities/_transform.scss
+++ b/utilities/_transform.scss
@@ -1,1 +1,1 @@
-@import '../modules/iotacss-utils-transform/utilities.transform';
+@forward '../modules/iotacss-utils-transform/utilities.transform';
