--- a/modules/iotacss-objs-container/_objects.container.scss
+++ b/modules/iotacss-objs-container/_objects.container.scss
@@ -1,3 +1,6 @@
+@use '../iotacss-settings-core/settings.core' as *;
+@use '../iotacss-tools-core/libraries/generate-unit' as *;
+
 // Container Object
 
 
