--- a/modules/iotacss-tools-core/utilities/_spacing-property.scss
+++ b/modules/iotacss-tools-core/utilities/_spacing-property.scss
@@ -1,3 +1,6 @@
+@use '../../iotacss-settings-core/settings.core' as *;
+@use '../../iotacss-tools-core/tools.core' as *;
+
 @mixin _iota-spacing-property($size, $suffix, $props...) {
   $property: nth($props, 1);
   $property-prefix: '.' + $iota-global-utilities-namespace + nth($props, 4);
