--- a/modules/iotacss-tools-rtl/libraries/_align-self.scss
+++ b/modules/iotacss-tools-rtl/libraries/_align-self.scss
@@ -1,3 +1,5 @@
+@use '../iotacss-tools-core/tools.core' as *;
+
 @mixin iota-align-self($value) {
   @include _iota-direction-property(align-self, $value, false);
 }
