--- a/modules/iotacss-utils-push/_utilities.push.scss
+++ b/modules/iotacss-utils-push/_utilities.push.scss
@@ -1,3 +1,7 @@
+@use "sass:math";
+@use '../iotacss-settings-core/settings.core' as *;
+@use '../iotacss-tools-core/tools.core' as *;
+
 // Push Utility
 
 
@@ -31,7 +35,7 @@ $iota-utils-push-var-push: $iota-global-utilities-namespace + $iota-utils-push-n
 @each $column-size in $iota-utils-push-columns {
 
   @for $i from 1 through ($column-size - 1) {
-    $margin-size: ((100 / $column-size) * $i) * 1%;
+    $margin-size: (math.div(100, $column-size) * $i) * 1%;
 
     .#{$iota-utils-push-var-push + $i + $iota-utils-push-delimiter + $column-size} {
       @include _iota-directional-property('margin', 'left', $margin-size, true);
@@ -62,7 +66,7 @@ $iota-utils-push-var-push: $iota-global-utilities-namespace + $iota-utils-push-n
       @each $column-size in $iota-utils-push-columns {
 
         @for $i from 1 through ($column-size - 1) {
-          $margin-size: ((100 / $column-size) * $i) * 1%;
+          $margin-size: (math.div(100, $column-size) * $i) * 1%;
 
           .#{$iota-utils-push-var-push + $i + $iota-utils-push-delimiter + $column-size + $iota-global-breakpoint-separator + $breakpoint-name} {
             @include _iota-directional-property('margin', 'left', $margin-size, true);
