--- a/modules/iotacss-utils-size/_utilities.size.scss
+++ b/modules/iotacss-utils-size/_utilities.size.scss
@@ -1,3 +1,6 @@
+@use "sass:math";
+@use '../iotacss-settings-core/settings.core' as *;
+
 // Size Utility
 
 
@@ -31,7 +34,7 @@ $iota-utils-size-var-size: $iota-global-utilities-namespace + $iota-utils-size-n
   @for $i from 1 through $column-size {
 
     .#{$iota-utils-size-var-size + $i + $iota-utils-size-delimiter + $column-size} {
-      width: ((100 / $column-size) * $i) * 1% !important;
+      width: (math.div(100, $column-size) * $i) * 1% !important;
     }
 
   }
@@ -54,7 +57,7 @@ $iota-utils-size-var-size: $iota-global-utilities-namespace + $iota-utils-size-n
         @for $i from 1 through $column-size {
 
           .#{$iota-utils-size-var-size + $i + $iota-utils-size-delimiter + $column-size + $iota-global-breakpoint-separator + $breakpoint-name} {
-            width: ((100 / $column-size) * $i) * 1% !important;
+            width: (math.div(100, $column-size) * $i) * 1% !important;
           }
 
         }
