--- a/utilities/_align-items.scss
+++ b/utilities/_align-items.scss
@@ -1,1 +1,1 @@
-@import '../modules/iotacss-utils-align-items/utilities.align-items';
+@forward '../modules/iotacss-utils-align-items/utilities.align-items';
