--- a/utilities/_justify-content.scss
+++ b/utilities/_justify-content.scss
@@ -1,1 +1,1 @@
-@import '../modules/iotacss-utils-justify-content/utilities.justify-content';
+@forward '../modules/iotacss-utils-justify-content/utilities.justify-content';
